--- a/couscous.yml
+++ b/couscous.yml
@@ -11,7 +11,7 @@ logo: https://cdn0.iconfinder.com/data/icons/ie_Shine/128/shine_19.png
 languages: ["en", "de"]
 defaultLanguage: de
 
-search: false
+search: true
 scripts:
     after:
         - php .couscous/generated/.scripts/generate-search-index.php
